[MARVJIRAHUDSON-51, MARVJIRAHUDSON-54] Removed dependency to suns base 64 codec and implemented the Apache Commons Codec Base64 codec
git-svn-id: http://svn.marvelution.com/atlassian/jira-hudson-integration/trunk@1266 079872ed-eb71-41de-a42c-5a92345b582c